2013-12-13  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/powerpc64/multiarch/Makefile: Add wcschr
	multiarch implementations.
	* sysdeps/powerpc/powerpc64/multiarch/ifunc-impl-list.c
	(__libc_ifunc_impl_list): Likewise.
	* sysdeps/powerpc/powerpc64/multiarch/wcschr-power6.c: New file.
	* sysdeps/powerpc/powerpc64/multiarch/wcschr-power7.c: New file.
	* sysdeps/powerpc/powerpc64/multiarch/wcschr-ppc64.c: New file.
	* sysdeps/powerpc/powerpc64/multiarch/wcschr.c : New file:
	multiarch wcschr for PPC64.

2013-12-13  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/powerpc64/multiarch/Makefile: Add strchrnul
	multiarch implementations.
	* sysdeps/powerpc/powerpc64/multiarch/ifunc-impl-list.c
	(__libc_ifunc_impl_list): Likewise.
	* sysdeps/powerpc/powerpc64/multiarch/strchrnul-power7.S: New file.
	* sysdeps/powerpc/powerpc64/multiarch/strchrnul-ppc64.c: New file.
	* sysdeps/powerpc/powerpc64/multiarch/strchrnul.c: New file:
	multiarch strchrnul for PPC64.

2013-12-13  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/powerpc64/multiarch/Makefile: Add strchr multiarch
	implementations.
	* sysdeps/powerpc/powerpc64/multiarch/ifunc-impl-list.c
	(__libc_ifunc_impl_list): Likewise.
	* sysdeps/powerpc/powerpc64/multiarch/rtld-strchr.S: New file.
	* sysdeps/powerpc/powerpc64/multiarch/strchr-power7.S: New file.
	* sysdeps/powerpc/powerpc64/multiarch/strchr-ppc64.S: New file.
	* sysdeps/powerpc/powerpc64/multiarch/strchr.c: New file: multiarch
	strchr for PPC64.

2013-12-13  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/powerpc64/multiarch/Makefile: Add strncmp multiarch
	implementations.
	* sysdeps/powerpc/powerpc64/multiarch/ifunc-impl-list.c
	(__libc_ifunc_impl_list): Likewise.
	* sysdeps/powerpc/powerpc64/multiarch/strncmp-power4.S: New file.
	* sysdeps/powerpc/powerpc64/multiarch/strncmp-power7.S: New file.
	* sysdeps/powerpc/powerpc64/multiarch/strncmp-ppc64.S: New file.